kubernetes-networks/canary/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tweety
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /canary
            backend:
              serviceName: tweety
              servicePort: 8000

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sylvester
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary"
    nginx.ingress.kubernetes.io/canary-by-header-value: "catch"
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /canary
            backend:
              serviceName: sylvester
              servicePort: 8000
